<resources>
    <string name="app_name">Carwash</string>
    <string name="home_title">Carwash</string>
    <string name="home_subtitle">Carwash</string>

    <string name="product">Produk</string>
    <string name="cashier">Kasir</string>
    <string name="queue">Antrian</string>
    <string name="queue_no">Antrian ke-</string>
    <string name="order_history">Riwayat Pesanan</string>
    <string name="customer_history">Riwayat Pelanggan</string>
    <string name="admin">Admin</string>
    <string name="delete_sales">Hapus Pesanan</string>
    <string name="print_laporan_harian_tunai">Laporan Harian Tunai</string>
    <string name="print_laporan_harian_debit">Laporan Harian Debit</string>
    <string name="print_laporan_harian_produk">Laporan Harian Produk Terjual</string>
    <string name="print_laporan_harian_stock">Laporan Harian Stok</string>
    <string name="print_laporan_harian_tepung">Laporan Harian Toko Tepung</string>
    <string name="print_laporan_harian_kebuli">Laporan Harian Kebuli</string>
    <string name="print_laporan_piutang">Laporan Harian Piutang</string>
    <string name="are_you_sure">Apakah anda yakin?</string>
    <string name="running_order">Pesanan Baru</string>
    <string name="print_order_list">Cetak List Pesanan</string>
    <string name="scan_printer">Scan Printer</string>
    <string name="select_printer">Pilih Printer</string>
    <string name="tes_printer">Tes Printer</string>
    <string name="currency">Rp.</string>
    <string name="menu">Menu</string>
    <string name="orders">Pesanan</string>
    <string name="dine_in">Ditempat</string>
    <string name="take_away">Bungkus</string>
    <string name="taken">Diambil</string>
    <string name="delivery">Diantar</string>
    <string name="place_order">Bayar</string>
    <string name="save_order">Simpan</string>
    <string name="save">Simpan</string>
    <string name="print">Cetak</string>
    <string name="washing_process">Mulai Cuci</string>
    <string name="hold_order">Reservasi</string>
    <string name="hold_order_list">Daftar Reservasi</string>
    <string name="direct_invoice">Bill</string>
    <string name="select_customer">Pilih Konsumen</string>
    <string name="add_customer">Tambah Konsumen</string>
    <string name="customer_name">Nama Konsumen</string>
    <string name="plat_number">Plat Nomor</string>
    <string name="car_type">Tipe Mobil</string>
    <string name="handphone">Nomor Handphone</string>
    <string name="address">Alamat</string>
    <string name="select_logistic">Pilih Pengiriman</string>
    <string name="select_table">Pilih Meja</string>
    <string name="select_washer1">Pencuci 1</string>
    <string name="select_washer2">Pencuci 2</string>
    <string name="select_washer3">Pencuci 3</string>
    <string name="table_name">Meja:</string>
    <string name="cancel">Batalkan</string>
    <string name="back">Kembali</string>
    <string name="warning">Peringatan</string>
    <string name="zero">0</string>
    <string name="search">Cari</string>
    <string name="search_order">Cari pesanan</string>
    <string name="search_table">Cari meja</string>
    <string name="discount">Diskon</string>
    <string name="total_discount">Total Diskon</string>
    <string name="total_payable">Total Bayar</string>
    <string name="print_bill">Cetak Bill</string>
    <string name="print_queue">Cetak Antrian</string>
    <string name="split_bill">Pisahkan Bill</string>
    <string name="print_bill_close_order">Selesaikan Pesanan</string>
    <string name="finish_order">Selesaikan Pesanan</string>
    <string name="no_order">No. Pesanan</string>
    <string name="ppn">PPN</string>
    <string name="subtotal">Subtotal</string>
    <string name="subtotal_with_discount">Subtotal setelah diskon</string>
    <string name="subtotal_with_discount_shipping">Subtotal setelah diskon &amp; ongkir</string>
    <string name="total">Total</string>
    <string name="total_alt">Total:</string>
    <string name="payment_method">Cara Pembayaran</string>
    <string name="paid_amount">Jumlah Pembayaran</string>
    <string name="due_amount">Jatuh Tempo</string>
    <string name="transfer_amount">Uang yang Ditransfer</string>
    <string name="given_amount">Uang yang Diberikan</string>
    <string name="change_amount">Uang Kembalian</string>
    <string name="payment_lacking">Pembayaran Kurang</string>
    <string name="total_sales_today">Total penjualah hari ini</string>
    <string name="total_stock_today">Stok Keluar</string>
    <string name="detail_order">Rincian Pesanan</string>
    <string name="update_order">Ubah Pesanan</string>
    <string name="cancel_order">Batalkan Pesanan</string>
    <string name="bill_no">Bill no.</string>
    <string name="price">Harga</string>
    <string name="qty">Qty</string>
    <string name="type">Tipe</string>
    <string name="customer">Konsumen</string>
    <string name="table">Meja</string>
    <string name="waiter">Pelayan</string>
    <string name="total_order">Jumlah Pesanan</string>
    <string name="service_charge">Layanan</string>
    <string name="use">Pakai</string>
    <string name="delete">Hapus</string>
    <string name="duarebu">Rp. 2.000</string>
    <string name="goceng">Rp. 5.000</string>
    <string name="ceban">Rp. 10.000</string>
    <string name="duapuluhrebu">Rp. 20.000</string>
    <string name="gocap">Rp. 50.000</string>
    <string name="cepe">Rp. 100.000</string>
    <string name="process_order_to_kitchet">Cetak nomor antrian?</string>
    <string name="sure_to_update_order">Yakin ingin mengubah data pesanan?</string>
    <string name="sure_to_split_bill">Yakin ingin pisahkan bill?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="label_login">Masuk</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">Email atau password yang dimasukkan tidak sesuai.</string>
    <string name="logout">Logout</string>
    <string name="close">Tutup</string>
    <string name="kitchen">Kitchen</string>
    <string name="bar">Bar</string>
    <string name="print_kot">Print KOT</string>
    <string name="double_click_to_exit">Tekan sekali lagi untuk keluar</string>
    <string name="pair_printer">Hubungkan printer</string>
    <string name="turn_on_bluetooth">Silahkan nyalakan bluetooth</string>
    <string name="pairing_printer">Sedang menghubungkan printer...</string>
    <string name="connected_with_printer">Terhubung dengan printer</string>
    <string name="disconnected_with_printer">Printer tidak terhubung</string>
    <string name="unable_connect_with_printer">Tidak dapat terhubung dengan printer</string>
    <string name="enable_print">Enable Printer</string>
    <string name="notes">Catatan</string>
    <string name="notes_here">Tulis catatan di sini</string>
    <string name="customer_here">Tulis nama konsumen di sini</string>
    <string name="open_cashier_registration">Buka Laci Kasir</string>
    <string name="close_cashier_registration">Tutup Laci Kasir</string>
    <string name="cashier_closed">Berhasil tutup laci kasir</string>
    <string name="enter_your_opening_balance">Kasir belum terbuka, masukkan saldo awal Anda!</string>
    <string name="error_message">Terjadi kesalahan server</string>
    <string name="out_of_stock">Stock Bahan Kosong</string>
    <string name="discount_error">Diskon tidak boleh kosong</string>
    <string name="discount_failed">Diskon lebih besar dari total bayar</string>
    <string name="discount_added">Diskon sudah ditambahkan</string>
    <string name="discount_deleted">Diskon sudah dihapus</string>
    <string name="shipping_price_added">Ongkir sudah ditambahkan</string>
    <string name="shipping_price_deleted">Ongkir sudah dihapus</string>
    <string name="shipping_price">Ongkir</string>
    <string name="subtotal_with_shipping">Subtotal setelah Ongkir</string>
    <string name="salon_process">Mulai Salon Mobil</string>
    <string name="jok_process">Mulai Leather Seat Mobil</string>
    <string name="select_worker1">Pekerja 1</string>
    <string name="select_worker2">Pekerja 2</string>
    <string name="select_worker3">Pekerja 3</string>
    <string name="washing_finish">Selesai Cuci</string>
    <string name="discount_salon">Diskon Salon</string>
    <string name="discount_jok">Diskon Leather Seat</string>
    <string name="discount_carwash">Diskon Cuci</string>
    <string name="edit">Edit</string>
    <string name="start_date">Tanggal Mulai</string>
    <string name="end_date">Tanggal Akhir</string>
    <string name="reset_filter">Reset Filter</string>

    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>

    <string-array name="type_member">
        <item>Royal 1</item>
        <item>Royal 2</item>
    </string-array>

    <string-array name="option_member">
        <item>options</item>
        <item>Perpanjang Member</item>
        <item>Lihat Riwayat</item>
        <item>Detail Member</item>
    </string-array>
</resources>
