<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="12dp"
    android:paddingEnd="24dp">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_border"
        android:fontFamily="@font/font_regular"
        android:hint="@string/plat_number"
        android:inputType="textCapCharacters"
        android:padding="12dp"
        android:textAllCaps="true"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/car_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_border"
        android:fontFamily="@font/font_regular"
        android:hint="@string/car_type"
        android:inputType="textCapSentences"
        android:padding="12dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/handphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/handphone"
        android:inputType="number"
        android:padding="12dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/address"
        android:inputType="textCapSentences"
        android:padding="12dp"
        android:textSize="14sp" />

</LinearLayout>