<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/close"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:background="@drawable/btn_filled"
        android:text="@string/close"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/kitchen"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:background="@drawable/btn_filled"
        android:text="@string/kitchen"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/bar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:background="@drawable/btn_filled"
        android:text="@string/bar"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/table"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:background="@drawable/btn_filled"
        android:text="@string/table"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>