<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:elevation="12dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="@dimen/spaceBottom"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="@dimen/spaceBottom"
                    android:background="@drawable/border_bottom"
                    android:fontFamily="@font/font_medium"
                    android:gravity="center"
                    android:paddingStart="@dimen/paddingScreen"
                    android:paddingEnd="@dimen/paddingScreen"
                    android:paddingBottom="@dimen/spaceBottom"
                    android:text="@string/detail_order"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/paddingScreen"
                    android:paddingEnd="@dimen/paddingScreen">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/spaceBottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/no_order" />

                        <TextView
                            android:id="@+id/sale_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/no_order"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/spaceBottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/subtotal" />

                        <TextView
                            android:id="@+id/subtotal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/subtotal"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/spaceBottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/discount" />

                        <TextView
                            android:id="@+id/discount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/discount"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/spaceBottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/total_discount" />

                        <TextView
                            android:id="@+id/total_discount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/total_discount"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/spaceBottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/paid_amount" />

                        <TextView
                            android:id="@+id/paid_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/paid_amount"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/spaceBottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/ppn" />

                        <TextView
                            android:id="@+id/ppn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ppn"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/spaceBottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/total_payable" />

                        <TextView
                            android:id="@+id/total_payable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/total_payable"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_order_closed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/paddingScreen"
                    android:layout_marginEnd="@dimen/paddingScreen"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_method" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/payment_method"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/paddingScreen"
                    android:layout_marginEnd="@dimen/paddingScreen"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/given_amount" />

                    <EditText
                        android:id="@+id/given_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:inputType="number"
                        android:textColorLink="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        tools:ignore="LabelFor,UnusedAttribute" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/paddingScreen"
                    android:layout_marginEnd="@dimen/paddingScreen"
                    android:layout_marginBottom="@dimen/spaceBottom"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/change_amount" />

                    <TextView
                        android:id="@+id/change_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/change_amount"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="@dimen/paddingScreen"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/print_bill"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_filled"
                        android:text="@string/print_bill_close_order"
                        android:textAllCaps="false"
                        android:textColor="#fff" />

                    <Button
                        android:id="@+id/update_order"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_filled"
                        android:text="@string/update_order"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:onClick="updateOrder"
                        tools:ignore="OnClick" />

                    <Button
                        android:id="@+id/cancel_order"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_filled"
                        android:text="@string/cancel_order"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>